ultimos cambios en html y css mas aside del carrito

--- a/index.html
+++ b/index.html
@@ -4,33 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="main.js"></script>
-    <title>The Real Burger</title>
-  </head>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+   <script defer src="/main.js"></script>
   <body>
     <nav class="navbar">
       <div class="navbar-container">
-        <div class="navbar-logo">The Real Burger</div>
+        <div class="navbar-logo">🍔 The Real Burger</div>
         <ul class="nav-menu">
-          <li class="nav-item">
-            <a href="#inicio" class="nav-link">Inicio</a>
-          </li>
+          <li class="nav-item"><a href="#inicio" class="nav-link">Inicio</a></li>
           <li class="nav-item"><a href="#menu" class="nav-link">Menú</a></li>
-          <li class="nav-item">
-            <a href="#carrito" class="nav-link">Carrito</a>
-          </li>
-          <li class="nav-item">
-            <a href="#contacto" class="nav-link">Contacto</a>
-          </li>
+          <li class="nav-item"><a href="#carrito" class="nav-link">Carrito</a></li>
+          <li class="nav-item"><a href="#contacto" class="nav-link">Contacto</a></li>
         </ul>
       </div>
     </nav>
-    <!-- me falta linkear las etiquetas 
-     (a) del menu y crear el search bar -->
+
     <main>
-      <h1>The Real Burger</h1>
-      <div id="burgerCards"></div>
-      <div id="CartBurger-container"></div>
+      <section id="inicio">
+        <h1>The Real Burger</h1>
+      </section>
+
+      <section id="menu">
+        <div id="burgerCards"></div>
+      </section>
     </main>
+
+
+    <aside id="CartBurger-container" aria-live="polite"></aside>
+
+  
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
   </body>
 </html>
