ultimos cambios en html y css mas aside del carrito

--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
-   <script defer src="/main.js"></script>
+    <script defer src="/main.js"></script>
+  </head>
   <body>
-    <nav class="navbar">
-      <div class="navbar-container">
-        <div class="navbar-logo">🍔 The Real Burger</div>
-        <ul class="nav-menu">
-          <li class="nav-item"><a href="#inicio" class="nav-link">Inicio</a></li>
-          <li class="nav-item"><a href="#menu" class="nav-link">Menú</a></li>
-          <li class="nav-item"><a href="#carrito" class="nav-link">Carrito</a></li>
-          <li class="nav-item"><a href="#contacto" class="nav-link">Contacto</a></li>
-        </ul>
-      </div>
-    </nav>
+    <hearder>
+      <nav class="navbar">
+        <div class="navbar-container">
+          <div class="navbar-logo">The Real Burger</div>
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="#inicio" class="nav-link">Inicio</a>
+            </li>
+            <li class="nav-item"><a href="#menu" class="nav-link">Menú</a></li>
+          </ul>
+        </div>
+      </nav>
+    </hearder>
 
     <main>
       <section id="inicio">
@@ -33,10 +36,8 @@
       </section>
     </main>
 
-
     <aside id="CartBurger-container" aria-live="polite"></aside>
 
-  
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script
       type="text/javascript"
