--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     />
     <script defer src="/main.js"></script>
   </head>
-  <body>
+  <bod
+  y>
     <hearder>
       <nav class="navbar">
         <div class="navbar-container">
