--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
-    <script defer src="/main.js"></script>
+    <script defer src="main.js"></script>
   </head>
-  <bod
-  y>
-    <hearder>
+  <body>
+    <header>
       <nav class="navbar">
         <div class="navbar-container">
           <div class="navbar-logo">The Real Burger</div>
@@ -25,7 +24,7 @@
           </ul>
         </div>
       </nav>
-    </hearder>
+    </header>
 
     <main>
       <section id="inicio">
